Aula 02 - Cadastro de produtos
Criando o nosso controller de produtos
Criando o formulário de cadastro
Pegando os parâmetros do formulário
Melhorando o nosso binding - com o objeto Produto

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>casadocodigo_spring</name>
+	<name>casadocodigo_spring2</name>
 	<comment></comment>
 	<projects>
 	</projects>
